tests/baselines/reference/parserObjectCreation1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserObjectCreation1.ts(1,5): error TS2322: Type '数字[][]' is not assignable to type '数字[]'.
  Type '数字[]' is not assignable to type '数字'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserObjectCreation1.ts (1 errors) ====
    var autoToken: number[] = new Array<number[]>(1);
        ~~~~~~~~~
!!! error TS2322: Type '数字[][]' is not assignable to type '数字[]'.
!!! error TS2322:   Type '数字[]' is not assignable to type '数字'.